# daily-mix

./: .gitignore  MANIFEST.in  README.rst  RELEASE.rst  flozz-daily-mix.conf.dist  noxfile.py  pyproject.toml  setup.py
.github/workflows/: python-ci.yml  python-packages.yml
flozz_daily_mix/: __init__.py  __main__.py  cli.py  config.py  db.py  helpers.py  musicbrainz_db.py  playlist.py  subsonic.py
flozz_daily_mix/data/musicbrainz_db/: genre  genre_alias  l_genre_genre
scripts/: update-genres.py  update-test-db.sh
tests/: test_db.py  test_subsonic.py
tests/fixtures/: music.db
tests/nextcloud/: Dockerfile  setup-nextcloud-music.sh
tests/nextcloud/musics/: README.txt  track.opus.bak
tests/nextcloud/musics/album1/: track1.opus  track2.opus
tests/nextcloud/musics/album2/: track1.opus  track2.opus  track3.opus  track4.opus
tests/nextcloud/musics/album3/: track1.opus  track2.opus  track3.opus  track4.opus  track5.opus
tests/nextcloud/musics/album4/: track1.opus  track10.opus  track11.opus  track12.opus  track13.opus  track14.opus  track2.opus  track3.opus  track4.opus  track5.opus  track6.opus  track7.opus  track8.opus  track9.opus
tests/nextcloud/musics/album5/: track1.opus  track10.opus  track11.opus  track12.opus  track13.opus  track14.opus  track2.opus  track3.opus  track4.opus  track5.opus  track6.opus  track7.opus  track8.opus  track9.opus
tests/nextcloud/musics/album6/: track1.opus  track10.opus  track2.opus  track3.opus  track4.opus  track5.opus  track6.opus  track7.opus  track8.opus  track9.opus
tests/nextcloud/musics/album7/: track1.opus  track2.opus  track3.opus  track4.opus  track5.opus  track6.opus  track7.opus  track8.opus  track9.opus
tests/nextcloud/musics/album8/: track1.opus  track10.opus  track11.opus  track12.opus  track13.opus  track2.opus  track3.opus  track4.opus  track5.opus  track6.opus  track7.opus  track8.opus  track9.opus
